@@ -1,3 +1,11 @@
+2008-05-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* qt4/log_player.cpp:
+	* qt4/main_window.cpp:
+	* qt4/options.cpp:
+	* qt4/options.h:
+	- implemented an auto quit mode.
+
 2008-04-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* NEWS:
